@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2022 Contributors to the Eclipse Foundation
  * Copyright (c) 1997, 2020 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -16,9 +17,15 @@
 
 package com.sun.enterprise.connectors.deployment.annotation.handlers;
 
+import com.sun.enterprise.deployment.AdminObject;
+import com.sun.enterprise.deployment.ConnectionDefDescriptor;
+import com.sun.enterprise.deployment.ConnectorConfigProperty;
+import com.sun.enterprise.deployment.ConnectorDescriptor;
+import com.sun.enterprise.deployment.InboundResourceAdapter;
+import com.sun.enterprise.deployment.MessageListener;
+import com.sun.enterprise.deployment.OutboundResourceAdapter;
 import com.sun.enterprise.deployment.annotation.context.RarBundleContext;
-import com.sun.enterprise.deployment.annotation.handlers.*;
-import com.sun.enterprise.deployment.*;
+import com.sun.enterprise.deployment.annotation.handlers.AbstractHandler;
 import com.sun.enterprise.util.LocalStringManagerImpl;
 
 import jakarta.resource.spi.Activation;
@@ -30,21 +37,28 @@ import jakarta.resource.spi.ConnectionDefinitions;
 import jakarta.resource.spi.Connector;
 import jakarta.resource.spi.ManagedConnectionFactory;
 import jakarta.resource.spi.ResourceAdapter;
+
 import java.lang.annotation.Annotation;
 import java.lang.annotation.ElementType;
-import java.lang.reflect.Method;
+import java.lang.reflect.AnnotatedElement;
 import java.lang.reflect.Field;
+import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
+import java.util.Iterator;
+import java.util.List;
 import java.util.Locale;
 import java.util.Set;
-import java.util.List;
-import java.util.Iterator;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
-import org.glassfish.apf.impl.HandlerProcessingResultImpl;
+import org.glassfish.apf.AnnotatedElementHandler;
+import org.glassfish.apf.AnnotationHandlerFor;
+import org.glassfish.apf.AnnotationInfo;
+import org.glassfish.apf.AnnotationProcessorException;
+import org.glassfish.apf.HandlerProcessingResult;
+import org.glassfish.apf.ResultType;
 import org.glassfish.apf.impl.AnnotationUtils;
-import org.glassfish.apf.*;
+import org.glassfish.apf.impl.HandlerProcessingResultImpl;
 import org.jvnet.hk2.annotations.Service;
 
 /**
@@ -54,13 +68,14 @@ import org.jvnet.hk2.annotations.Service;
 @AnnotationHandlerFor(ConfigProperty.class)
 public class ConfigPropertyHandler extends AbstractHandler {
 
-    protected final static LocalStringManagerImpl localStrings =
-            new LocalStringManagerImpl(ConfigPropertyHandler.class);
+    protected final static LocalStringManagerImpl localStrings = new LocalStringManagerImpl(
+        ConfigPropertyHandler.class);
 
     protected final static Logger logger = AnnotationUtils.getLogger();
 
     private static final String SUCCESS = "success";
 
+    @Override
     public HandlerProcessingResult processAnnotation(AnnotationInfo element) throws AnnotationProcessorException {
         AnnotatedElementHandler aeHandler = element.getProcessingContext().getHandler();
         ConfigProperty configProperty = (ConfigProperty) element.getAnnotation();
@@ -76,89 +91,96 @@ public class ConfigPropertyHandler extends AbstractHandler {
         return getDefaultProcessedResult();
     }
 
-    public HandlerProcessingResult handleConfigPropertyAnnotation(
-            ConfigProperty configProperty, AnnotationInfo element, ConnectorDescriptor desc){
-                    String defaultValue = configProperty.defaultValue();
-            String[] description = configProperty.description();
-            boolean ignore = configProperty.ignore();
-            boolean supportsDynamicUpdates = configProperty.supportsDynamicUpdates();
-            boolean confidential = configProperty.confidential();
 
-            Class type ;
+    public HandlerProcessingResult handleConfigPropertyAnnotation(ConfigProperty configProperty, AnnotationInfo element,
+        ConnectorDescriptor desc) {
+        String defaultValue = configProperty.defaultValue();
+        String[] description = configProperty.description();
+        boolean ignore = configProperty.ignore();
+        boolean supportsDynamicUpdates = configProperty.supportsDynamicUpdates();
+        boolean confidential = configProperty.confidential();
 
-            if (element.getElementType().equals(ElementType.METHOD)) {
-                Method m = (Method) element.getAnnotatedElement();
-                String result = validateMethod(m, configProperty);
+        Class<?> type;
 
-                if(!result.equals(SUCCESS)){
-                    return getFailureResult(element, result, true);
-                }
+        if (element.getElementType().equals(ElementType.METHOD)) {
+            Method m = (Method) element.getAnnotatedElement();
+            String result = validateMethod(m, configProperty);
 
-                type = getType(configProperty, m.getParameterTypes()[0]);
-                //XXX: Siva: For now use the first provided description
-                String firstDesc = "";
-                if (description.length > 0) firstDesc = description[0];
-                ConnectorConfigProperty ep = getConfigProperty(defaultValue, firstDesc, ignore,
-                        supportsDynamicUpdates, confidential, type, m.getName().substring(3));
-
-                handleConfigPropertyAnnotation(element, desc, ep, m.getDeclaringClass());
-
-            } else if (element.getElementType().equals(ElementType.FIELD)) {
-                Field f = (Field) element.getAnnotatedElement();
-                String result = validateField(f, configProperty);
-
-
-                if(!result.equals(SUCCESS)){
-                    return getFailureResult(element, result, true);
-                }
-
-                type = getType(configProperty, f.getType());
-
-                if(defaultValue == null || defaultValue.equals("")){
-                    defaultValue = deriveDefaultValueOfField(f);
-                }
-                //XXX: Siva: For now use the first provided description
-                String firstDesc = "";
-                if (description.length > 0) firstDesc = description[0];
-                ConnectorConfigProperty ep = getConfigProperty(defaultValue,firstDesc, ignore,
-                        supportsDynamicUpdates, confidential,  type, f.getName());
-
-                handleConfigPropertyAnnotation(element, desc, ep, f.getDeclaringClass());
+            if (!result.equals(SUCCESS)) {
+                return getFailureResult(element, result, true);
             }
+
+            type = getType(configProperty, m.getParameterTypes()[0]);
+            // XXX: Siva: For now use the first provided description
+            String firstDesc = "";
+            if (description.length > 0) {
+                firstDesc = description[0];
+            }
+            ConnectorConfigProperty ep = getConfigProperty(defaultValue, firstDesc, ignore, supportsDynamicUpdates,
+                confidential, type, m.getName().substring(3));
+
+            handleConfigPropertyAnnotation(element, desc, ep, m.getDeclaringClass());
+
+        } else if (element.getElementType().equals(ElementType.FIELD)) {
+            Field f = (Field) element.getAnnotatedElement();
+            String result = validateField(f, configProperty);
+
+            if (!result.equals(SUCCESS)) {
+                return getFailureResult(element, result, true);
+            }
+
+            type = getType(configProperty, f.getType());
+
+            if (defaultValue == null || defaultValue.equals("")) {
+                defaultValue = deriveDefaultValueOfField(f);
+            }
+            // XXX: Siva: For now use the first provided description
+            String firstDesc = "";
+            if (description.length > 0) {
+                firstDesc = description[0];
+            }
+            ConnectorConfigProperty ep = getConfigProperty(defaultValue, firstDesc, ignore, supportsDynamicUpdates,
+                confidential, type, f.getName());
+
+            handleConfigPropertyAnnotation(element, desc, ep, f.getDeclaringClass());
+        }
         return getDefaultProcessedResult();
     }
 
-    private static Class getWrapperClass(String primitive){
-        if(primitive.equalsIgnoreCase("int")){
+
+    private static Class<?> getWrapperClass(String primitive) {
+        if (primitive.equalsIgnoreCase("int")) {
             return java.lang.Integer.class;
-        }else if(primitive.equalsIgnoreCase("long")){
+        } else if (primitive.equalsIgnoreCase("long")) {
             return java.lang.Long.class;
-        }else if(primitive.equalsIgnoreCase("short")){
+        } else if (primitive.equalsIgnoreCase("short")) {
             return java.lang.Short.class;
-        }else if(primitive.equalsIgnoreCase("char")){
+        } else if (primitive.equalsIgnoreCase("char")) {
             return Character.class;
-        }else if(primitive.equalsIgnoreCase("byte")){
+        } else if (primitive.equalsIgnoreCase("byte")) {
             return java.lang.Byte.class;
-        }else if(primitive.equalsIgnoreCase("boolean")){
+        } else if (primitive.equalsIgnoreCase("boolean")) {
             return java.lang.Boolean.class;
-        }else if(primitive.equalsIgnoreCase("float")){
+        } else if (primitive.equalsIgnoreCase("float")) {
             return java.lang.Float.class;
-        }else if(primitive.equalsIgnoreCase("double")){
+        } else if (primitive.equalsIgnoreCase("double")) {
             return java.lang.Double.class;
-        }else{
-            throw new IllegalArgumentException("Could not determine Wrapper class for primitive type ["+primitive+"]");
+        } else {
+            throw new IllegalArgumentException(
+                "Could not determine Wrapper class for primitive type [" + primitive + "]");
         }
     }
 
-    private static String deriveDefaultValueOfField(Field f){
-        Class declaringClass = f.getDeclaringClass();
+
+    private static String deriveDefaultValueOfField(Field f) {
+        Class<?> declaringClass = f.getDeclaringClass();
         String fieldName = f.getName();
         String value = null;
         try {
-            Object o = declaringClass.newInstance();
+            Object o = declaringClass.getDeclaredConstructor().newInstance();
             String getterMethod = "get" + getCamelCasedPropertyName(fieldName);
 
-            if(Boolean.class.isAssignableFrom(f.getType())){
+            if (Boolean.class.isAssignableFrom(f.getType())) {
                 getterMethod = "is" + getCamelCasedPropertyName(fieldName);
             }
             Method m = declaringClass.getDeclaredMethod(getterMethod);
@@ -177,6 +199,7 @@ public class ConfigPropertyHandler extends AbstractHandler {
         return value;
     }
 
+
     /**
      * Returns camel-cased version of a propertyName. Used to construct
      * correct accessor and mutator method names for a give property.
@@ -188,19 +211,17 @@ public class ConfigPropertyHandler extends AbstractHandler {
 
 
     private static ConnectorConfigProperty getConfigProperty(String defaultValue, String description, boolean ignore,
-                                                      boolean supportsDynamicUpdates, boolean confidential,
-                                                      Class type, String propertyName) {
+        boolean supportsDynamicUpdates, boolean confidential, Class<?> type, String propertyName) {
         ConnectorConfigProperty ep = new ConnectorConfigProperty();
-        //use description if specified
-        if (!description.equals("")) {
+        // use description if specified
+        if (!description.isEmpty()) {
             ep.setDescription(description);
         }
-        //use default value if specified
-        if ( defaultValue!= null && !defaultValue.equals("")) {
+        // use default value if specified
+        if (defaultValue != null && !defaultValue.isEmpty()) {
             ep.setValue(defaultValue);
         }
         ep.setType(type.getName());
-
         ep.setName(propertyName);
 
         if (!ep.isSetIgnoreCalled()) {
@@ -215,38 +236,38 @@ public class ConfigPropertyHandler extends AbstractHandler {
         return ep;
     }
 
-    private void handleConfigPropertyAnnotation(AnnotationInfo element, ConnectorDescriptor desc,
-                                                ConnectorConfigProperty ep, Class declaringClass) {
 
+    private void handleConfigPropertyAnnotation(AnnotationInfo element, ConnectorDescriptor desc,
+        ConnectorConfigProperty ep, Class<?> declaringClass) {
         if ((ResourceAdapter.class.isAssignableFrom(declaringClass)
-                && (!Modifier.isAbstract(declaringClass.getModifiers()))) ||
-                ( declaringClass.getAnnotation(Connector.class) != null)){
+            && (!Modifier.isAbstract(declaringClass.getModifiers())))
+            || (declaringClass.getAnnotation(Connector.class) != null)) {
             if (!processConnector(desc, ep, declaringClass)) {
-                //need to book-keep the annotation for post-processing
+                // need to book-keep the annotation for post-processing
                 desc.addConfigPropertyAnnotation(declaringClass.getName(), element);
             }
-        } else if (ManagedConnectionFactory.class.isAssignableFrom(declaringClass) &&
-                (!Modifier.isAbstract(declaringClass.getModifiers()))) {
-                //@ConnectionDefintion, @ConnectionDefinitions must be of type ManagedConnectionFactory and hence
-                //the above check is sufficient to take care of JavaBean as well annotation.
-                processConnectionDefinition(element, desc, ep, declaringClass);
-        } else if ((ActivationSpec.class.isAssignableFrom(declaringClass) &&
-                (!Modifier.isAbstract(declaringClass.getModifiers()))) ||
-                (declaringClass.getAnnotation(Activation.class) != null) ) {
+        } else if (ManagedConnectionFactory.class.isAssignableFrom(declaringClass)
+            && (!Modifier.isAbstract(declaringClass.getModifiers()))) {
+            // @ConnectionDefintion, @ConnectionDefinitions must be of type ManagedConnectionFactory
+            // and hence the above check is sufficient to take care of JavaBean as well annotation.
+            processConnectionDefinition(element, desc, ep, declaringClass);
+        } else if ((ActivationSpec.class.isAssignableFrom(declaringClass)
+            && (!Modifier.isAbstract(declaringClass.getModifiers())))
+            || (declaringClass.getAnnotation(Activation.class) != null)) {
             processActivation(element, desc, ep, declaringClass);
-        } else if (declaringClass.getAnnotation(AdministeredObject.class) != null ||
-                isAdminObjectJavaBean(declaringClass, desc)){
+        } else if (declaringClass.getAnnotation(AdministeredObject.class) != null
+            || isAdminObjectJavaBean(declaringClass, desc)) {
             processAdministeredObject(element, desc, ep, declaringClass);
         }
     }
 
     private boolean isAdminObjectJavaBean(Class adminObjectClass, ConnectorDescriptor desc) {
         boolean isAdminObject = false;
-        Set adminObjects = desc.getAdminObjects();
-        Iterator adminObjectsItr = adminObjects.iterator();
-        while(adminObjectsItr.hasNext()){
-            AdminObject adminObject = (AdminObject)adminObjectsItr.next();
-            if(adminObject.getAdminObjectClass().equals(adminObjectClass.getName())){
+        Set<AdminObject> adminObjects = desc.getAdminObjects();
+        Iterator<AdminObject> adminObjectsItr = adminObjects.iterator();
+        while (adminObjectsItr.hasNext()) {
+            AdminObject adminObject = adminObjectsItr.next();
+            if (adminObject.getAdminObjectClass().equals(adminObjectClass.getName())) {
                 isAdminObject = true;
                 break;
             }
@@ -254,39 +275,40 @@ public class ConfigPropertyHandler extends AbstractHandler {
         return isAdminObject;
     }
 
-    private void processAdministeredObject(AnnotationInfo element, ConnectorDescriptor desc,
-                                                           ConnectorConfigProperty ep, Class declaringClass) {
 
-        if (declaringClass.getAnnotation(AdministeredObject.class) != null) {
-            AdministeredObject ao = (AdministeredObject) declaringClass.getAnnotation(AdministeredObject.class);
-            Class[] adminObjectInterfaces = ao.adminObjectInterfaces();
-            if(adminObjectInterfaces.length > 0){
-                for (Class adminObjectInterface : adminObjectInterfaces) {
+    private void processAdministeredObject(AnnotationInfo element, ConnectorDescriptor desc, ConnectorConfigProperty ep,
+        Class<?> declaringClass) {
+        Annotation annotation = declaringClass.getAnnotation(AdministeredObject.class);
+        if (annotation != null) {
+            AdministeredObject ao = (AdministeredObject) annotation;
+            Class<?>[] adminObjectInterfaces = ao.adminObjectInterfaces();
+            if (adminObjectInterfaces.length > 0) {
+                for (Class<?> adminObjectInterface : adminObjectInterfaces) {
                     handleAdministeredObject(element, desc, ep, declaringClass, adminObjectInterface);
                 }
-            }else{
-                //handle the case where admin object interfaces are not specified via annotaiton
-                List<Class> interfacesList = AdministeredObjectHandler.
-                        deriveAdminObjectInterfacesFromHierarchy(declaringClass);
+            } else {
+                // handle the case where admin object interfaces are not specified via annotaiton
+                List<Class<?>> interfacesList = AdministeredObjectHandler
+                    .deriveAdminObjectInterfacesFromHierarchy(declaringClass);
 
-                //We assume that there will be only one interface (if there had been many, admin-object annotation
-                //handler would have rejected it.)
-                if(interfacesList.size() == 1){
-                    Class intf = interfacesList.get(0);
+                // We assume that there will be only one interface (if there had been many
+                // admin-object annotation, handler would have rejected it.)
+                if (interfacesList.size() == 1) {
+                    Class<?> intf = interfacesList.get(0);
                     handleAdministeredObject(element, desc, ep, declaringClass, intf);
                 }
             }
         } else {
-            Set adminObjects = desc.getAdminObjects();
-            Iterator adminObjectItr = adminObjects.iterator();
-            while(adminObjectItr.hasNext()){
-                AdminObject adminObject = (AdminObject)adminObjectItr.next();
-                if(adminObject.getAdminObjectClass().equals(declaringClass.getName())){
+            Set<AdminObject> adminObjects = desc.getAdminObjects();
+            Iterator<AdminObject> adminObjectItr = adminObjects.iterator();
+            while (adminObjectItr.hasNext()) {
+                AdminObject adminObject = adminObjectItr.next();
+                if (adminObject.getAdminObjectClass().equals(declaringClass.getName())) {
                     if (!(isConfigDefined(adminObject.getConfigProperties(), ep))) {
                         adminObject.addConfigProperty(ep);
                     }
                     String uniqueName = adminObject.getAdminObjectInterface() + "_" + adminObject.getAdminObjectClass();
-                    if(!desc.getConfigPropertyProcessedClasses().contains(uniqueName)){
+                    if (!desc.getConfigPropertyProcessedClasses().contains(uniqueName)) {
                         processParent(declaringClass.getSuperclass(), adminObject.getConfigProperties());
                         desc.addConfigPropertyProcessedClass(declaringClass.getName());
                     }
@@ -295,46 +317,46 @@ public class ConfigPropertyHandler extends AbstractHandler {
         }
     }
 
-    private void handleAdministeredObject(AnnotationInfo element, ConnectorDescriptor desc,
-                                          ConnectorConfigProperty ep, Class adminObjectClass, Class adminObjectIntf) {
+
+    private void handleAdministeredObject(AnnotationInfo element, ConnectorDescriptor desc, ConnectorConfigProperty ep,
+        Class<?> adminObjectClass, Class<?> adminObjectIntf) {
         AdminObject adminObject = desc.getAdminObject(adminObjectIntf.getName(), adminObjectClass.getName());
         if (adminObject != null) {
             if (!(isConfigDefined(adminObject.getConfigProperties(), ep))) {
                 adminObject.addConfigProperty(ep);
             }
-            if(!desc.getConfigPropertyProcessedClasses().contains(adminObjectClass.getName())){
+            if (!desc.getConfigPropertyProcessedClasses().contains(adminObjectClass.getName())) {
                 processParent(adminObjectClass.getSuperclass(), adminObject.getConfigProperties());
                 desc.addConfigPropertyProcessedClass(adminObjectClass.getName());
             }
         } else {
             // ideally adminObject should not be null as "@AdministeredObject"
             // should have been handled before @ConfigProperty
-            getFailureResult(element, "could not get adminobject of interface " +
-                    "[ " + adminObjectIntf.getName() + " ]" +
-                    " and class [ " + adminObjectClass.getName() + " ]", true);
+            getFailureResult(element, "could not get adminobject of interface [ " + adminObjectIntf.getName() + " ]"
+                + " and class [ " + adminObjectClass.getName() + " ]", true);
         }
     }
 
     private void processActivation(AnnotationInfo element, ConnectorDescriptor desc,
-                                   ConnectorConfigProperty ep, Class declaringClass) {
+        ConnectorConfigProperty ep, Class<?> declaringClass) {
 
-           InboundResourceAdapter ira = desc.getInboundResourceAdapter();
+        InboundResourceAdapter ira = desc.getInboundResourceAdapter();
         if (declaringClass.getAnnotation(Activation.class) != null) {
             // Inbound Resource Adapter should have been defined if @Activation annotation
             // was processed successfully, before.
             if (desc.getInBoundDefined()) {
-                Activation activation = (Activation) declaringClass.getAnnotation(Activation.class);
-                Class[] messageListeners = activation.messageListeners();
+                Activation activation = declaringClass.getAnnotation(Activation.class);
+                Class<?>[] messageListeners = activation.messageListeners();
 
-                //messageListeners cant be 0 as we ask "@Activation" to be handled before "@ConfigProperty"
-                for (Class clz : messageListeners) {
+                // messageListeners cant be 0 as we ask "@Activation" to be handled before "@ConfigProperty"
+                for (Class<?> clz : messageListeners) {
                     if (ira.hasMessageListenerType(clz.getName())) {
                         MessageListener ml = ira.getMessageListener(clz.getName());
 
-                        //check whether the activation-spec class in the descriptor
-                        //for a particular message-listener is the same as this class as it is possible
-                        //that this activation-spec class may have been ignored if ra.xml is already defined with
-                        //this particular message-listener-type. If so, we should not add config-property as they
+                        // check whether the activation-spec class in the descriptor
+                        // for a particular message-listener is the same as this class as it is possible
+                        // that this activation-spec class may have been ignored if ra.xml is already defined with
+                        // this particular message-listener-type. If so, we should not add config-property as they
                         // belong to a particular activation-spec class.
                         if (ml.getActivationSpecClass().equals(declaringClass.getName())) {
                             if (!(isConfigDefined(ml.getConfigProperties(), ep))) {
@@ -349,44 +371,40 @@ public class ConfigPropertyHandler extends AbstractHandler {
                 }
             }
         } else {
-                if(desc.getInBoundDefined()){
-                    Set messageListeners = desc.getInboundResourceAdapter().getMessageListeners();
-                    Iterator mlItr = messageListeners.iterator();
-                    while(mlItr.hasNext()){
-                        MessageListener ml = (MessageListener)mlItr.next();
-                        if(ml.getActivationSpecClass().equals(declaringClass.getName())){
-                            if (!(isConfigDefined(ml.getConfigProperties(), ep))) {
-                                ml.addConfigProperty(ep);
-                            }
-                            if(!desc.getConfigPropertyProcessedClasses().contains(declaringClass.getName())){
-                                processParent(declaringClass.getSuperclass(), ml.getConfigProperties());
-                                desc.addConfigPropertyProcessedClass(declaringClass.getName());
-                            }
+            if (desc.getInBoundDefined()) {
+                Set<MessageListener> messageListeners = desc.getInboundResourceAdapter().getMessageListeners();
+                Iterator<MessageListener> mlItr = messageListeners.iterator();
+                while (mlItr.hasNext()) {
+                    MessageListener ml = mlItr.next();
+                    if (ml.getActivationSpecClass().equals(declaringClass.getName())) {
+                        if (!(isConfigDefined(ml.getConfigProperties(), ep))) {
+                            ml.addConfigProperty(ep);
+                        }
+                        if (!desc.getConfigPropertyProcessedClasses().contains(declaringClass.getName())) {
+                            processParent(declaringClass.getSuperclass(), ml.getConfigProperties());
+                            desc.addConfigPropertyProcessedClass(declaringClass.getName());
                         }
                     }
                 }
             }
         }
+    }
+
 
     private void processConnectionDefinition(AnnotationInfo element, ConnectorDescriptor desc,
-                                             ConnectorConfigProperty ep, Class declaringClass) {
+        ConnectorConfigProperty ep, Class<?> declaringClass) {
         if (desc.getOutBoundDefined()) {
-
             OutboundResourceAdapter ora = desc.getOutboundResourceAdapter();
-            Set connectionDefinitions = ora.getConnectionDefs();
-
-            for (Object o : connectionDefinitions) {
-                ConnectionDefDescriptor cd = (ConnectionDefDescriptor) o;
-
+            Set<ConnectionDefDescriptor> connectionDefinitions = ora.getConnectionDefs();
+            for (ConnectionDefDescriptor cd : connectionDefinitions) {
                 if (cd.getManagedConnectionFactoryImpl().equals(declaringClass.getName())) {
-
                     if (!(isConfigDefined(cd.getConfigProperties(), ep))) {
                         cd.addConfigProperty(ep);
                     }
-                    //As same MCF class can be used for multiple connection-definitions
-                    //store it based on connection-factory-interface class which is the unique
-                    //identifier for a connection-definition
-                    if(!desc.getConfigPropertyProcessedClasses().contains(cd.getConnectionFactoryIntf())){
+                    // As same MCF class can be used for multiple connection-definitions
+                    // store it based on connection-factory-interface class which is the unique
+                    // identifier for a connection-definition
+                    if (!desc.getConfigPropertyProcessedClasses().contains(cd.getConnectionFactoryIntf())) {
                         processParent(declaringClass.getSuperclass(), cd.getConfigProperties());
                         desc.addConfigPropertyProcessedClass(cd.getConnectionFactoryIntf());
                     }
@@ -409,77 +427,77 @@ public class ConfigPropertyHandler extends AbstractHandler {
         }
     }
 
-    public static boolean processConnector(ConnectorDescriptor desc, ConnectorConfigProperty ep, Class declaringClass) {
+
+    public static boolean processConnector(ConnectorDescriptor desc, ConnectorConfigProperty ep,
+        Class<?> declaringClass) {
         // make sure that the RA Class considered here is the one specified in descriptor
         // If not, it will be processed once the @Connector is selected during post-processing
 
         // handle the annotation specified on a ResourceAdapter JavaBean
         // make sure that the property is not already specified in DD
-        if(desc.getResourceAdapterClass().equals(declaringClass.getName())){
-            if (!(isConfigDefined(desc.getConfigProperties(), ep))) {
-                desc.addConfigProperty(ep);
-            }
-            if(!desc.getConfigPropertyProcessedClasses().contains(declaringClass.getName())){
-                processParent(declaringClass.getSuperclass(), desc.getConfigProperties());
-                desc.addConfigPropertyProcessedClass(declaringClass.getName());
-            }
-            //indicate that the config-property is processed
-            return true;
-        }else{
-            //indicate that the config-property is not processed and need to be processed during post-processing
+        if (!desc.getResourceAdapterClass().equals(declaringClass.getName())) {
+            // indicate that the config-property is not processed and need to be processed during
+            // post-processing
             return false;
         }
+
+        if (!(isConfigDefined(desc.getConfigProperties(), ep))) {
+            desc.addConfigProperty(ep);
+        }
+        if (!desc.getConfigPropertyProcessedClasses().contains(declaringClass.getName())) {
+            processParent(declaringClass.getSuperclass(), desc.getConfigProperties());
+            desc.addConfigPropertyProcessedClass(declaringClass.getName());
+        }
+        // indicate that the config-property is processed
+        return true;
     }
 
     private static String validateMethod(Method m, ConfigProperty property){
 
-        if(!m.getName().startsWith("set")){
+        if (!m.getName().startsWith("set")) {
             return "not a standard JavaBean setter method : [" + m.getName() + " ] ";
         }
 
         int modifier = m.getModifiers();
 
-        //we are not restricting protected, default methods as potentially
-        //any of the sub-classes may broaden the accessibility.
-        if(Modifier.isPrivate(modifier)){
-            return "@ConfigProperty annotation on a " +
-                    "private setter method [ "+m.getName()+" ] " +
-                    "of class [ "+m.getDeclaringClass().getName()+" ]";
+        // we are not restricting protected, default methods as potentially
+        // any of the sub-classes may broaden the accessibility.
+        if (Modifier.isPrivate(modifier)) {
+            return "@ConfigProperty annotation on a private setter method [ " + m.getName() + " ] "
+                + "of class [ " + m.getDeclaringClass().getName() + " ]";
         }
 
-        Class type = property.type();
-        Class[] parameters = m.getParameterTypes();
-        Class propertyType;
-        if (parameters.length != 0) {
-            if (parameters.length == 1) {
-                propertyType = parameters[0];
-            } else {
-                return "more than one parameter for JavaBean setter method : [" + m.getName() + " ] ";
-            }
-        } else {
+        Class<?> type = property.type();
+        Class<?>[] parameters = m.getParameterTypes();
+        Class<?> propertyType;
+        if (parameters.length == 0) {
             return "no parameters for JavaBean setter method :  [" + m.getName() + " ] ";
         }
-        //check compatibility between annotation type and property-type
+        // check compatibility between annotation type and property-type
+        if (parameters.length == 1) {
+            propertyType = parameters[0];
+        } else {
+            return "more than one parameter for JavaBean setter method : [" + m.getName() + " ] ";
+        }
 
         if (!type.equals(Object.class) && !propertyType.isAssignableFrom(type)) {
-            if(type.isPrimitive()){
+            if (type.isPrimitive()) {
                 type = getWrapperClass(type.getName());
-            }else if(propertyType.isPrimitive()){
+            } else if (propertyType.isPrimitive()) {
                 propertyType = getWrapperClass(propertyType.getName());
             }
 
-            if(!propertyType.isAssignableFrom(type)){
-                return "annotation type [" + type + "] and property-type" +
-                        " [" + propertyType + "] " +
-                        "are not assignment compatible";
+            if (!propertyType.isAssignableFrom(type)) {
+                return "annotation type [" + type + "] and property-type" + " [" + propertyType + "] "
+                    + "are not assignment compatible";
             }
         }
         return SUCCESS;
     }
 
-    private static Class getType( ConfigProperty property, Class type){
-        Class configPropertyType = property.type();
 
+    private static Class<?> getType( ConfigProperty property, Class<?> type){
+        Class<?> configPropertyType = property.type();
         if (configPropertyType.equals(Object.class)) {
             configPropertyType = type;
         }
@@ -488,9 +506,9 @@ public class ConfigPropertyHandler extends AbstractHandler {
 
     private static String validateField(Field f, ConfigProperty property){
 
-        Class c = f.getDeclaringClass();
-        Class returnType = f.getType();
-        Class type = property.type();
+        Class<?> c = f.getDeclaringClass();
+        Class<?> returnType = f.getType();
+        Class<?> type = property.type();
         if (!type.equals(Object.class)) {
             //check compatibility between annotation type and return-type
             if (!returnType.isAssignableFrom(type)) {
@@ -503,12 +521,12 @@ public class ConfigPropertyHandler extends AbstractHandler {
         return SUCCESS;
     }
 
-    public static void processParent(Class claz, Set configProperties) {
 
-        if(claz == null){
+    public static void processParent(Class<?> claz, Set<ConnectorConfigProperty> configProperties) {
+        if (claz == null) {
             return;
         }
-        //process the methods
+        // process the methods
         Method[] methods = claz.getDeclaredMethods();
         for (Method m : methods) {
             ConfigProperty property = m.getAnnotation(ConfigProperty.class);
@@ -518,55 +536,52 @@ public class ConfigPropertyHandler extends AbstractHandler {
                     throw new IllegalStateException(result);
                 }
                 String defaultValue = property.defaultValue();
-                Class type = getType(property, m.getParameterTypes()[0]);
+                Class<?> type = getType(property, m.getParameterTypes()[0]);
                 processConfigProperty(configProperties, m.getName().substring(3), property, defaultValue, type);
             }
         }
 
-        //process the fields
+        // process the fields
         Field[] fields = claz.getDeclaredFields();
         for (Field f : fields) {
             ConfigProperty property = f.getAnnotation(ConfigProperty.class);
-
             if (property != null) {
                 String status = validateField(f, property);
-                if(!status.equals(SUCCESS)){
+                if (!status.equals(SUCCESS)) {
                     throw new IllegalStateException(status);
                 }
                 String defaultValue = property.defaultValue();
-
-                if (defaultValue == null || defaultValue.equals("")) {
+                if (defaultValue == null || defaultValue.isEmpty()) {
                     defaultValue = deriveDefaultValueOfField(f);
                 }
                 processConfigProperty(configProperties, f.getName(), property, defaultValue, f.getType());
             }
         }
 
-        //process its super-class
+        // process its super-class
         if (claz.getSuperclass() != null) {
             processParent(claz.getSuperclass(), configProperties);
         }
     }
 
-    private static void processConfigProperty(Set configProperties, String propertyName,
-                                              ConfigProperty property, String defaultValue, Class declaredEntityType) {
+
+    private static void processConfigProperty(Set<ConnectorConfigProperty> configProperties, String propertyName,
+        ConfigProperty property, String defaultValue, Class<?> declaredEntityType) {
         String description = "";
-        if(property.description() != null && property.description().length > 0){
+        if (property.description() != null && property.description().length > 0) {
             description = property.description()[0];
         }
-        Class type = getType(property, declaredEntityType);
-        ConnectorConfigProperty ccp = getConfigProperty(defaultValue, description,
-                property.ignore(), property.supportsDynamicUpdates(), property.confidential(),
-                type, propertyName);
-        if(!isConfigDefined(configProperties, ccp)){
+        Class<?> type = getType(property, declaredEntityType);
+        ConnectorConfigProperty ccp = getConfigProperty(defaultValue, description, property.ignore(),
+            property.supportsDynamicUpdates(), property.confidential(), type, propertyName);
+        if (!isConfigDefined(configProperties, ccp)) {
             configProperties.add(ccp);
         }
     }
 
-    private static boolean isConfigDefined(Set configProperties, ConnectorConfigProperty ep) {
+    private static boolean isConfigDefined(Set<ConnectorConfigProperty> configProperties, ConnectorConfigProperty ep) {
         boolean result = false;
-        for (Object o : configProperties) {
-            ConnectorConfigProperty ddEnvProperty = (ConnectorConfigProperty) o;
+        for (ConnectorConfigProperty ddEnvProperty : configProperties) {
             if (ddEnvProperty.getName().equals(ep.getName())) {
                 result = true;
                 break;
@@ -575,34 +590,33 @@ public class ConfigPropertyHandler extends AbstractHandler {
         return result;
     }
 
+
     /**
      * @return a default processed result
      */
+    @Override
     protected HandlerProcessingResult getDefaultProcessedResult() {
-        return HandlerProcessingResultImpl.getDefaultResult(
-                getAnnotationType(), ResultType.PROCESSED);
+        return HandlerProcessingResultImpl.getDefaultResult(getAnnotationType(), ResultType.PROCESSED);
     }
 
 
+    @Override
     public Class<? extends Annotation>[] getTypeDependencies() {
         return new Class[]{Connector.class, ConnectionDefinition.class, ConnectionDefinitions.class,
                 Activation.class, AdministeredObject.class};
     }
 
-    private void debug(String s) {
-        logger.log(Level.INFO, "[ConfigPropertyHandler] " + s);
-    }
 
     private HandlerProcessingResultImpl getFailureResult(AnnotationInfo element, String message, boolean doLog) {
         HandlerProcessingResultImpl result = new HandlerProcessingResultImpl();
         result.addResult(getAnnotationType(), ResultType.FAILED);
         if (doLog) {
-            Object o = element.getAnnotatedElement();
+            AnnotatedElement o = element.getAnnotatedElement();
             String className = null;
-            if(o instanceof Field){
-                className = ((Field)o).getDeclaringClass().getName();
-            }else { //else it can be only METHOD
-                className = ((Method)o).getDeclaringClass().getName();
+            if (o instanceof Field) {
+                className = ((Field) o).getDeclaringClass().getName();
+            } else { // else it can be only METHOD
+                className = ((Method) o).getDeclaringClass().getName();
             }
             Object args[] = new Object[]{
                 element.getAnnotation(),
